Quorum3/Library/Tests/IfStatement/Pass/IfStatementOneCondition_VarEqual_True.quorum
class Main
    action Main
        boolean result = false

        if result = false
            result = true
        end
        
        output result
    end
end