Quorum3/Library/Tests/IfStatement/Fail/IfStatementInt().quorum
class Main
    action Main
        integer result = 0
        integer a = 1

        if a
            result = 1
        else
            result = 2
        end

        output result
    end
end